--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,20 @@
 {
-  "short_name": "항암기록",
-  "name": "항암치료 기록 관리",
-  "description": "항암치료 과정을 기록하고 관리하는 PWA 서비스",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any maskable"
-    }
-  ],
+  "name": "Cancer Monitor",
+  "short_name": "Cancer Monitor",
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#2c3e50",
   "background_color": "#ffffff",
-  "orientation": "portrait"
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
