--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,10 @@ REACT_APP_FIREBASE_PROJECT_ID=your_project_id_here
 REACT_APP_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 REACT_APP_FIREBASE_APP_ID=your_app_id_here
-REACT_APP_ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# Serverless API (Vercel/Firebase Functions 등 서버 환경 변수에 설정)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+FIREBASE_PROJECT_ID=your_firebase_project_id_here
+FIREBASE_CLIENT_EMAIL=your_firebase_admin_client_email_here
+FIREBASE_PRIVATE_KEY=your_firebase_admin_private_key_here
+ALLOWED_ORIGINS=https://your-domain.com
